<resources>
    <string name="app_name">Muzik</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Title for the application. [CHAR LIMIT=12] -->

    <!-- Shop for music online [CHAR LIMIT=20] -->
    <string name="shop">Shop</string>

    <!-- Top Charts currently[CHAR LIMIT=20] -->
    <string name="top_charts">Top Charts</string>

    <!-- details of the song being played [CHAR LIMIT=20] -->
    <string name="listen">Listen</string>

    <!-- Category of the songs by type [CHAR LIMIT=20] -->
    <string name="library">Library</string>
    <string name="title_activity_library">Library</string>
    <string name="action_settings">Settings</string>

    <string name="hello_world">Hello world!</string>
    <string name="expiryFormat">MM/YY</string>
    <string name="cardHint">1234 1234 1234 1234</string>
    <string name="cvvHint">123</string>
    <string name="fwd">fwd</string>
    <string name="back">back</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="payment_success">Payment Successful !! Listen to music now</string>
    <string name="payment_failure">Payment Cancelled</string>
    <string name="now_playing">Now Playing</string>
    <string name="expiry">Expiry</string>
    <string name="cvv">CVV</string>
    <string name="submit">Submit</string>
    <string name="card">Card</string>
    <string name="buySongs">Select your songs to buy</string>
    <string name="top10">Top 10 this week</string>
    <string name="buy">Buy</string>
    <string name="musicPlayer">Music Palyer</string>
    <string name="albums">albums</string>
    <string name="palylists">palylists</string>
    <string name="cancel">Cancel</string>







</resources>
